--- a/CldvFinalTest/Views/Shared/_Layout.cshtml
+++ b/CldvFinalTest/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="FileUpload" asp-action="Upload">File Upload</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="IndexUser">Products</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
